--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -2,6 +2,6 @@ html * {
   font-family: "Noto Sans JP", sans-serif;
 }
 
-*[draggable=true] img {
+*[draggable=true] &img {
   -webkit-touch-callout: none;
 }
