--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -5,3 +5,18 @@ html * {
 img[draggable=true] {
   -webkit-touch-callout: none;
 }
+
+.dnd-poly-drag-image {
+  opacity: 1 !important;
+  width: 100px !important;
+}
+/* applied when the drag effect is none and the operation ends */
+.dnd-poly-drag-image.snapback {
+  -webkit-transition: -webkit-transform 250ms ease-out !important;
+  -moz-transition: -moz-transform 250ms ease-out !important;
+  -o-transition: -o-transform 250ms ease-out !important;
+  transition: transform 250ms ease-out !important;
+}
+/* applied always as a base class for drop effect styles */
+.dnd-poly-drag-icon {
+}
